--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>Home</title>
+  <title>home | the corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
@@ -49,18 +49,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div id="buttonu101-wrapper">
-    <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
+    <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu101" href="about--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
    </div>
    <div class="clearfix grpelem" id="pu121"><!-- column -->
-    <a class="nonblock nontext colelem" id="u121" href="post.html"><!-- simple frame --></a>
-    <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu133" href="post.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u134-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p><span id="u134">Top 4 Low-Cap Altcoins for Major Summer Gains</span></p></div></a>
+    <a class="nonblock nontext colelem" id="u121" href="post--the-corner.html"><!-- simple frame --></a>
+    <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu133" href="post--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u134-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p><span id="u134">Top 4 Low-Cap Altcoins for Major Summer Gains</span></p></div></a>
    </div>
    <div class="clearfix grpelem" id="pu94-4"><!-- group -->
     <div id="u94-4-wrapper">
-     <a class="nonblock nontext MuseLinkActive clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the square</p></a>
+     <a class="nonblock nontext MuseLinkActive clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
     </div>
     <div id="buttonu109-wrapper">
-     <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
+     <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu109" href="trades--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
     </div>
    </div>
    <div class="clearfix grpelem" id="pu130-4"><!-- column -->
@@ -75,9 +75,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="browser_width grpelem" id="u200-bw">
     <div id="u200"><!-- group -->
      <div class="clearfix" id="u200_align_to_page">
-      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u201-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>HOME</p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
      </div>
     </div>
    </div>
