--- a/post--the-corner.html
+++ b/post--the-corner.html
@@ -11,17 +11,17 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "post.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "post--the-corner.css"], "outOfDate":[]};
 </script>
   
-  <title>Post</title>
+  <title>post | the corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/post.css?crc=4221008184" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/post--the-corner.css?crc=4221008184" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_post.css?crc=251888171"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_post--the-corner.css?crc=251888171"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -38,7 +38,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div id="u118"><!-- simple frame --></div>
     </div>
     <div id="buttonu101-wrapper">
-     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
+     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
     </div>
    </div>
    <div class="clearfix grpelem" id="pu358"><!-- column -->
@@ -75,21 +75,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div id="u94-4-wrapper">
-    <a class="nonblock nontext clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the square</p></a>
+    <a class="nonblock nontext clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
    </div>
    <div class="clearfix grpelem" id="u367-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
     <p>by @BitcoinRooster</p>
    </div>
    <div id="buttonu109-wrapper">
-    <a class="nonblock nontext Button clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
+    <a class="nonblock nontext Button clearfix" id="buttonu109" href="trades--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
    </div>
    <div class="verticalspacer" data-offset-top="3901" data-content-above-spacer="3901" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u200-bw">
     <div id="u200"><!-- group -->
      <div class="clearfix" id="u200_align_to_page">
-      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
       <a class="nonblock nontext clearfix grpelem" id="u201-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>HOME</p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
      </div>
     </div>
    </div>
