--- a/trades--the-corner.html
+++ b/trades--the-corner.html
@@ -11,24 +11,24 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "about.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "trades--the-corner.css"], "outOfDate":[]};
 </script>
   
-  <title>About</title>
+  <title>trades | the corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4062317023" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/trades--the-corner.css?crc=513480496" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=126126610"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_trades--the-corner.css?crc=4229710228"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/roboto:n5,n7:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/roboto:n7,n5,i7:default.js" type="text/javascript"></script>
     <!--/*
 
 */
@@ -41,39 +41,32 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width" id="u118-bw">
      <div id="u118"><!-- simple frame --></div>
     </div>
+    <div id="u94-4-wrapper">
+     <a class="nonblock nontext clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
+    </div>
     <div id="buttonu101-wrapper">
-     <a class="nonblock nontext Button ButtonSelected clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
+     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu170-4"><!-- column -->
-    <div class="clearfix colelem" id="u170-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p>The Coffeer was created in 2019 by a teenager from Arizona (@BitcoinRooster on Twitter). A young developer with backgrounds in video game and iOS development, Rooster fell in love with the technology that powered cryptocurrency and the blockchain. Fueled by curiosity, Rooster began to investigate the white paper behind every altcoin he came across, and eventually took an interest in trading the internet coins in 2017. With a newly found passion for cryptocurrency and for programming, Rooster took it upon himself to create algorithms to trade these mysterious cryptocurrencies. As the operations soon became too messy, he decided to create this very blog you're reading in order to track his progress as a cryptocurrency developer.</p>
+   <div class="clearfix grpelem" id="pu334"><!-- column -->
+    <div class="colelem" id="u334"><!-- simple frame --></div>
+    <div class="clearfix colelem" id="u279-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p>WALL OF TRADES</p>
     </div>
-    <div class="clearfix colelem" id="u338-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p>This blog is a bit of a mess. If you're reading this right now you're probably only here because Rooster referred you to it or because you have no idea where you are. Either way, on here you'll find posts about cryptocurrency trades (not financial advice, just opinions), Rooster's trading algorithms, and his progress at summer camps or internships. Occasionally a guest writer may appear on the blog, maybe to write a post on baking cakes or something I don't really know. If you'd like to stay updated with the madness, please subscribe to our newsletter mail list (can be done at the bottom of any page). Have fun reading!</p>
-    </div>
-   </div>
-   <div id="u94-4-wrapper">
-    <a class="nonblock nontext clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the square</p></a>
-   </div>
-   <div class="clearfix grpelem" id="pu166-4"><!-- column -->
-    <div class="clearfix colelem" id="u166-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p>The Story</p>
-    </div>
-    <div class="clearfix colelem" id="u337-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p>The Blog</p>
+    <div class="clearfix colelem" id="u276-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p>@BitcoinRooster</p>
     </div>
    </div>
    <div id="buttonu109-wrapper">
-    <a class="nonblock nontext Button clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
+    <a class="nonblock nontext Button ButtonSelected clearfix" id="buttonu109" href="trades--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
    </div>
-   <div class="verticalspacer" data-offset-top="598" data-content-above-spacer="608" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="219" data-content-above-spacer="141" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u200-bw">
     <div id="u200"><!-- group -->
      <div class="clearfix" id="u200_align_to_page">
-      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u202-4" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
       <a class="nonblock nontext clearfix grpelem" id="u201-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>HOME</p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
+      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u203-4" href="trades--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
      </div>
     </div>
    </div>
