--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3895738166" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3918815963" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3904756177"/>
@@ -49,18 +49,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div id="buttonu101-wrapper">
-    <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu101" href="about--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
+    <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
    </div>
-   <div class="clearfix grpelem" id="pu121"><!-- column -->
-    <a class="nonblock nontext colelem" id="u121" href="post--the-corner.html"><!-- simple frame --></a>
-    <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu133" href="post--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u134-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p><span id="u134">Top 4 Low-Cap Altcoins for Major Summer Gains</span></p></div></a>
+   <div class="clearfix grpelem" id="pu398"><!-- column -->
+    <a class="nonblock nontext clip_frame colelem" id="u398" href="postone.html"><!-- image --><img class="block" id="u398_img" src="images/bitcoin%20101%20(1).jpg?crc=3916845332" alt="" data-heightwidthratio="0.5634920634920635" data-image-width="378" data-image-height="213"/></a>
+    <a class="nonblock nontext Button rounded-corners clearfix colelem" id="buttonu133" href="postone.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u134-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p><span id="u134">Bitcoin 101: Currency of the future</span></p></div></a>
    </div>
    <div class="clearfix grpelem" id="pu94-4"><!-- group -->
     <div id="u94-4-wrapper">
      <a class="nonblock nontext MuseLinkActive clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
     </div>
     <div id="buttonu109-wrapper">
-     <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu109" href="trades--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
+     <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
     </div>
    </div>
    <div class="clearfix grpelem" id="pu130-4"><!-- column -->
@@ -71,13 +71,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p>@BitcoinRooster</p>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="381" data-content-above-spacer="380" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="388" data-content-above-spacer="388" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u200-bw">
     <div id="u200"><!-- group -->
      <div class="clearfix" id="u200_align_to_page">
-      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u201-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>HOME</p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
      </div>
     </div>
    </div>
