--- a/postone.html
+++ b/postone.html
@@ -11,17 +11,17 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "post--the-corner.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "postone.css"], "outOfDate":[]};
 </script>
   
   <title>post | the corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/post--the-corner.css?crc=4221008184" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/postone.css?crc=378038359" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_post--the-corner.css?crc=251888171"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_postone.css?crc=251888171"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -38,38 +38,40 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div id="u118"><!-- simple frame --></div>
     </div>
     <div id="buttonu101-wrapper">
-     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
+     <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu358"><!-- column -->
-    <div class="colelem" id="u358"><!-- simple frame --></div>
-    <div class="Button rounded-corners clearfix colelem" id="buttonu359" data-visibility="changed" style="visibility:hidden"><!-- container box -->
-     <div class="clearfix grpelem" id="u360-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-      <p><span id="u360">Bitcoin 101: Currency of the future</span></p>
+   <div class="clearfix grpelem" id="pu410"><!-- column -->
+    <div class="clip_frame colelem" id="u410"><!-- image -->
+     <img class="block" id="u410_img" src="images/bitcoin%20101%20(1).jpg?crc=3916845332" alt="" data-heightwidthratio="0.5634920634920635" data-image-width="378" data-image-height="213"/>
+    </div>
+    <div class="Button rounded-corners clearfix colelem" id="buttonu408" data-visibility="changed" style="visibility:hidden"><!-- container box -->
+     <div class="clearfix grpelem" id="u409-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p><span id="u409">Bitcoin 101: Currency of the future</span></p>
      </div>
     </div>
     <div class="Button rounded-corners clearfix colelem" id="buttonu370" data-visibility="changed" style="visibility:hidden"><!-- container box -->
-     <div class="clearfix grpelem" id="u371-38" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <div class="clearfix grpelem" id="u371-46" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
       <p>Hi, all.</p>
       <p id="u371-3">&nbsp;</p>
       <p>Welcome to my first post on this blog.</p>
       <p id="u371-6">&nbsp;</p>
       <p>I'm going to be discussing the fundamentals that fuel Bitcoin and similar cryptocurrencies as well as how you can profit off these internet coins right now.</p>
       <p id="u371-9">&nbsp;</p>
-      <p>To start, Bitcoin was created just a year after the 2008 stock market crash as an alternative currency to prevent such a disaster from happening again. Decentralized, anonymous, and deflationary, it became a hit among computer nerds and finance buffs but didn't really take off for the general public until it reached $1,000 in 2013 and $19,000 in 2017.</p>
+      <p>To start, Bitcoin was created just a year after the 2008 stock market crash as a mechanism to prevent such a disaster from happening again; an alternative to fiat currency. Decentralized, anonymous, and deflationary, it became a hit among computer nerds and finance buffs but didn't really take off for the general public until it reached $1,000 in 2013 and $19,000 in 2017.</p>
       <p>&nbsp;</p>
-      <p>Surprisingly, despite the currency's commercial success, no one knows who the original programmer behind Bitcoin was, as he or she never claimed the title to fame. The community therefore refers to the unknown character simply as 'Satoshi Nakamoto.' Also, if you hear the name <span id="u371-14">Craig Wright</span>, you can think: <span id="u371-16">Not Satoshi</span>.</p>
-      <p id="u371-19">&nbsp;</p>
-      <p>Nowadays, a great number of people have left the industry, believing it to have 'died' after falling back to $3,000 from its $20,000 bull run. However, the fact of the matter is it's just getting started, regardless of what you hear on the television or read in the newspaper.</p>
-      <p id="u371-22">&nbsp;</p>
-      <p>Now, Bitcoin runs based on a protocol referred to as 'blockchain'. In its simplest form, blockchain is just a system that facilitates transactions between anonymous parties with codes to verify the transaction. I won't dive into the raw programs behind it in this article, but in later articles will. Stay tuned.</p>
-      <p id="u371-25">&nbsp;</p>
-      <p>Lastly, Bitcoin trading became a popular topic amidst the 2017 bull run, in which Bitcoin rose over 1000% in a matter of months, allowing some to become very rich. The basic premise of cryptocurrency trading is not much different than that of stock trading, particularly forex; the same principles apply but personally I've found cryptocurrency trading more alluring as there are no regulations because it is decentralized and universal. This allows users to easily place trades freely and openly, and implement programs with little to no restrictions.</p>
-      <p id="u371-28">&nbsp;</p>
-      <p>This blog will discuss a lot of these trade strategies, and post a lot of these trade algorithms. My goal in writing these articles will be to help facilitate the growth of cryptocurrency as a whole, ideally by helping all who read the blog to learn more about the industry and how to make big bucks from it, one step at a time.</p>
-      <p id="u371-31">&nbsp;</p>
-      <p>Note: You can view my own trades in real-time at the &quot;Trades&quot; section of this website, which uploads my trades from BitMEX and Binance as I make them.</p>
-      <p id="u371-34">&nbsp;</p>
+      <p>Surprisingly, despite the strange currency's commercial success, no one knows who the original programmer behind Bitcoin was, as he or she never claimed the title to fame. The community therefore refers to the unknown character simply as 'Satoshi<span id="u371-14"> </span><span id="u371-15">Nakamoto</span>'. If you hear the name <span id="u371-17">Craig</span><span id="u371-18"> </span><span id="u371-19">Wright</span>, think: <span id="u371-21">Not</span><span id="u371-22"> </span><span id="u371-23">Satoshi</span>.</p>
+      <p id="u371-26">&nbsp;</p>
+      <p>Nowadays, a great number of people have left the industry, believing it to have 'died' after falling back to $3,000 from its $19,000 bull run. However, the fact of the matter is it's just getting started, regardless of what you hear on the television or read in the newspaper.</p>
+      <p id="u371-29">&nbsp;</p>
+      <p>Now, knowing some history, let's dive into the technical fuel of cryptocurrency. Bitcoin and similar altcoins run&nbsp; on the basis of a protocol known as 'blockchain'. In its simplest form, blockchain is just a system that facilitates transactions between anonymous parties. The beauty of this simple algorithm is that anyone can securely and anonymously transfer anything to anyone else, eliminating need for the middle-man (in the modern world, that'd be the bank. Or PayPal). In essence, it's decentralized -- you are your own bank. I won't dive into the raw code for blockchain just yet, but I'll be sure to soon.</p>
+      <p id="u371-32">&nbsp;</p>
+      <p>Now, how can you make money off this strange, new currency? Bitcoin trading became a popular topic amidst the 2017 bull run, in which Bitcoin rose over 1000% in a matter of months, allowing some to become very rich. The basic premise of cryptocurrency trading is not much different than that of stock trading: the same rules apply but personally I've found cryptocurrency trading more alluring because it's unregulated and universal. This allows users to place trades freely and openly, and implement programs with little to no restrictions from the exchange. So, to answer the question simply, you can make money with Bitcoin the same way you do with stocks. Except, with cryptocurrency, it's just more.</p>
+      <p id="u371-35">&nbsp;</p>
+      <p>This blog will discuss a lot of trade strategies, and post a lot of trade algorithms. My goal in writing these articles will be to help facilitate the growth of cryptocurrency as a whole, ideally by helping all who read the blog to learn more about the industry and how to make big bucks from it, one step at a time.</p>
+      <p id="u371-38">&nbsp;</p>
+      <p><span id="u371-39">Note</span>: You can view my own trades in real-time at the &quot;Trades&quot; section of this website, which forwards my trades from BitMEX and Binance as I make them.</p>
+      <p id="u371-42">&nbsp;</p>
       <p>Thanks for reading. I'll see you next week.</p>
      </div>
     </div>
@@ -81,15 +83,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <p>by @BitcoinRooster</p>
    </div>
    <div id="buttonu109-wrapper">
-    <a class="nonblock nontext Button clearfix" id="buttonu109" href="trades--the-corner.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
+    <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
    </div>
-   <div class="verticalspacer" data-offset-top="3901" data-content-above-spacer="3901" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="4481" data-content-above-spacer="4481" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u200-bw">
     <div id="u200"><!-- group -->
      <div class="clearfix" id="u200_align_to_page">
-      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u202-4" href="about.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>ABOUT</p></a>
       <a class="nonblock nontext clearfix grpelem" id="u201-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>HOME</p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades--the-corner.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u203-4" href="trades.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>TRADES</p></a>
      </div>
     </div>
    </div>
