--- a/postone.html
+++ b/postone.html
@@ -14,6 +14,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "postone.css"], "outOfDate":[]};
 </script>
   
+  <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
   <title>post | the corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
@@ -38,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div id="u118"><!-- simple frame --></div>
     </div>
     <div id="buttonu101-wrapper">
-     <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
+     <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
     </div>
    </div>
    <div class="clearfix grpelem" id="pu410"><!-- column -->
@@ -83,7 +84,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <p>by @BitcoinRooster</p>
    </div>
    <div id="buttonu109-wrapper">
-    <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
+    <a class="nonblock nontext Button clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
    </div>
    <div class="verticalspacer" data-offset-top="4481" data-content-above-spacer="4481" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u200-bw">
