--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
   <title>about | the corner</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=530099340"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=522156061" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=445691848" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=126126610"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=3767681925"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -46,9 +46,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext Button ButtonSelected clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu170-4"><!-- column -->
-    <div class="clearfix colelem" id="u170-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p>The Coffeer was created in 2019 by a teenager from Arizona (@BitcoinRooster on Twitter). A young developer with backgrounds in video game and iOS development, Rooster fell in love with the technology that powered cryptocurrency and the blockchain. Fueled by curiosity, Rooster began to investigate the white paper behind every altcoin he came across, and eventually took an interest in trading the internet coins in 2017. With a newly found passion for cryptocurrency and for programming, Rooster took it upon himself to create algorithms to trade these mysterious cryptocurrencies. As the operations soon became too messy, he decided to create this very blog you're reading in order to track his progress as a cryptocurrency developer.</p>
+   <div class="clearfix grpelem" id="pu170-7"><!-- column -->
+    <div class="clearfix colelem" id="u170-7" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p>The Coffeer was created in 2019 by a teenager from Arizona (<a class="nonblock" href="https://twitter.com/BitcoinRooster"><span id="u170-2">@BitcoinRooster on Twitter</span></a>). A young developer with backgrounds in video game and iOS development, Rooster fell in love with the technology that powered cryptocurrency and the blockchain. Fueled by curiosity, Rooster began to investigate the white paper behind every altcoin he came across, and eventually took an interest in trading the internet coins in 2017. With a newly found passion for cryptocurrency and for programming, Rooster took it upon himself to create algorithms to trade these mysterious cryptocurrencies. As the operations soon became too messy, he decided to create this very blog you're reading in order to track his progress as a cryptocurrency developer.</p>
     </div>
     <div class="clearfix colelem" id="u338-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
      <p>This blog is a bit of a mess. If you're reading this right now you're probably only here because Rooster referred you to it or because you have no idea where you are. Either way, on here you'll find posts about cryptocurrency trades (not financial advice, just opinions), Rooster's trading algorithms, and his progress at summer camps or internships. Occasionally a guest writer may appear on the blog, maybe to write a post on baking cakes or something I don't really know. If you'd like to stay updated with the madness, please subscribe to our newsletter mail list (can be done at the bottom of any page). Have fun reading!</p>
