--- a/postone.html
+++ b/postone.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
   <title>post | the corner</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=530099340"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/postone.css?crc=378038359" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/postone.css?crc=4065064222" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_postone.css?crc=251888171"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_postone.css?crc=4259637233"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -80,8 +80,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div id="u94-4-wrapper">
     <a class="nonblock nontext clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
    </div>
-   <div class="clearfix grpelem" id="u367-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-    <p>by @BitcoinRooster</p>
+   <div class="clearfix grpelem" id="u367-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+    <p>by <a class="nonblock" href="https://twitter.com/BitcoinRooster"><span id="u367-2">@BitcoinRooster</span></a></p>
    </div>
    <div id="buttonu109-wrapper">
     <a class="nonblock nontext Button clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
