--- a/trades.html
+++ b/trades.html
@@ -17,19 +17,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
   <title>trades | the corner</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=530099340"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/trades.css?crc=24324831" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/trades.css?crc=394688585" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_trades.css?crc=4229710228"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_trades.css?crc=124094467"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/roboto:n7,n5,i7:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/roboto:n5,n7,i7:default.js" type="text/javascript"></script>
     <!--/*
 
 */
@@ -42,26 +42,25 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width" id="u118-bw">
      <div id="u118"><!-- simple frame --></div>
     </div>
-    <div id="u94-4-wrapper">
-     <a class="nonblock nontext clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
-    </div>
     <div id="buttonu101-wrapper">
      <a class="nonblock nontext Button clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>about</p></div></a>
     </div>
+   </div>
+   <a class="nonblock nontext clearfix grpelem" id="u448-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Sorry, nothing here yet :)</p></a>
+   <div id="u94-4-wrapper">
+    <a class="nonblock nontext clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>the corner</p></a>
    </div>
    <div class="clearfix grpelem" id="pu334"><!-- column -->
     <div class="colelem" id="u334"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u279-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
      <p>WALL OF TRADES</p>
     </div>
-    <div class="clearfix colelem" id="u276-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p>@BitcoinRooster</p>
-    </div>
+    <a class="nonblock nontext clearfix colelem" id="u276-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>@BitcoinRooster</p></a>
    </div>
    <div id="buttonu109-wrapper">
     <a class="nonblock nontext Button ButtonSelected clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>trades</p></div></a>
    </div>
-   <div class="verticalspacer" data-offset-top="219" data-content-above-spacer="141" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="229" data-content-above-spacer="244" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u200-bw">
     <div id="u200"><!-- group -->
      <div class="clearfix" id="u200_align_to_page">
