--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ span.hideMe {
     <div class="Paragraph-Style size_fluid_width colelem" id="u427" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
      
 <div style="display:block;height:100%;width:100%!important;clear:both;position: relative;overflow:scroll!important;">
-<script language="JavaScript" src="http://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Ftwitrss.me%2Ftwitter_user_to_rss%2F%3Fuser%3Dbitcoinrooster&num=6 &date=y&desc=400>1 = &utf=y&pc=y "  charset="UTF-8" type="text/javascript">
+<script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Ftwitrss.me%2Ftwitter_user_to_rss%2F%3Fuser%3Dbitcoinrooster&num=6 &date=y&desc=400>1 = &utf=y&pc=y "  charset="UTF-8" type="text/javascript">
 </script>
 </div>
     
