--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=4276222306"/>
   <title>home | the corner</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=530099340"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3763118919"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=527710208" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=270090088" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3904756177"/>
@@ -285,7 +285,7 @@ span.hideMe {
     <div class="Paragraph-Style size_fluid_width colelem" id="u427" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
      
 <div style="display:block;height:100%;width:100%!important;clear:both;position: relative;overflow:scroll!important;">
-<script language="JavaScript" src="https://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Ftwitrss.me%2Ftwitter_user_to_rss%2F%3Fuser%3Dbitcoinrooster&num=6 &date=y&desc=400>1 = &utf=y&pc=y "  charset="UTF-8" type="text/javascript">
+<script language="JavaScript" src="http://feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Ftwitrss.me%2Ftwitter_user_to_rss%2F%3Fuser%3Dbitcoinrooster&num=6 &date=y&desc=400>1 = &utf=y&pc=y "  charset="UTF-8" type="text/javascript">
 </script>
 </div>
     
